# Growth-coupling-suite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: GCS_Installation_Manual.docx
example/: conduct_gcOpt_optimization_parallel.ipynb  conduct_gcOpt_optimization_parallel.py  conduct_gcOpt_optimization_single.ipynb  conduct_gcOpt_optimization_single.py  gcOpt_config_file_parallel.py  gcOpt_config_file_single.py
example/Models/: ECC2_hr_database_dir_assessed.json
src/growth_coupling_suite/bilevel_optimization_algorithm/: bilevel_optimization.py  lp_setup.py  lp_solving.py
src/growth_coupling_suite/external_APIs/: biggAPI.py  bigg_query_library.json  keggAPI.py  kegg_query_library.json
src/growth_coupling_suite/gcOpt_algorithm/: config_gcOpt_default.py  gcOpt.py
src/growth_coupling_suite/heterologous_reactions_processing/: config_heterologous_reactions_default.py  heterologous_reactions_processing.py
src/growth_coupling_suite/heterologous_reactions_processing/model_database/: iAM_Pb448.json  iMM1415.json  iYS854.json
src/growth_coupling_suite/model_processing/: config_model_processing_default.py  model_processing.py  reduce_model.py
src/growth_coupling_suite/reaction_directionality/: config_reaction_directionality_default.py  reaction_fluxvariability_evaluation.py  reaction_thermodynamics_evaluation.py
src/growth_coupling_suite/reaction_directionality/Data/: conc_Sauer_avg.xlsx  (+3 more)
src/growth_coupling_suite/strain_analysis/: add_prebuilt_pathways.py  design_variable_significance.py  strain_analysis.py  strain_design_analysis.py  strain_design_solution.py  test_example_MTase.py
src/growth_coupling_suite/util/: monitor.py  util.py
tests/: check_equilibrator.py  create_heterologous_reaction_database_model.ipynb  test_gcopt_initialization.py  test_gcopt_run.py  test_reaction_directionality.py
tests/Files/: ECC2.json  gcOpt_config_file_single.py
(+3 files in other folders)
