[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growth_coupling_suite"
version = "0.0.2"
description = "Computation and analysis of growth-coupled strain designs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tobias Alter", email = "tobias.alter@rwth-aachen.de"}]
dependencies = [
    "cobra==0.28.0",
    "gurobipy==9.5.2",
    "equilibrator-api==0.6.0",
    "requests==2.28.1",
    "matplotlib==3.5.3",
    "XlsxWriter==3.0.3",
    "openpyxl~=3.0.10",
    "ipykernel"
]

[project.optional-dependencies]
test = ["pytest"]
