[metadata]
version = 0.0.2
name = growth_coupling_suite
author = Tobias Alter, Colton Lloyd
author_email = tobial@biosustain.dtu.dk
description = Computation and analysis of growth-coupled strain designs
license = MIT

[options]
install_requires =
    cobra~=0.25.0
    gurobipy~=9.5.2
    equilibrator-api~=0.4.6
    requests~=2.28.1
    pandas~=1.4.3
    numpy~=1.23.2
    matplotlib~=3.5.3
    XlsxWriter~=3.0.3
    openpyxl~=3.2.0b1
    
package_dir =
    =src
    
packages = find:   

python_requires = >=3.8 

[options.packages.find]
where=src
